Add DNS wait for TXT record creation

--- a/src/main/wacs.csproj
+++ b/src/main/wacs.csproj
@@ -74,6 +74,7 @@
 		<ProjectReference Include="..\plugin.validation.http.ftp\wacs.validation.http.ftp.csproj" />
 		<ProjectReference Include="..\plugin.validation.http.sftp\wacs.validation.http.sftp.csproj" />
 		<ProjectReference Include="..\plugin.validation.http.webdav\wacs.validation.http.webdav.csproj" />
+		<ProjectReference Include="..\plugin.validation.dns.dnsmadeeasy\wacs.validation.dns.dnsmadeeasy.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
